# agents-databricks-workshop

./: .env.example  .gitignore  README.md  grant_mcp_permissions.py  provision_lakebase.py  requirements.txt  setup_lakebase_permissions.py
deep-agents-app/: .env.example  README.md  agent.py  app.yaml  databricks.yml  eval.py  pyproject.toml  start_server.py  streamlit_app.py  test_agent.py
deep-agents-app/deep_agents_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hello-world-agent/: .env.example  README.md  app.yaml  databricks.yml  eval.py  pyproject.toml  start_server.py  streamlit_app.py  test_agent.py
hello-world-agent/agent/: agent.py  memory.py  server.py
hello-world-agent/hello_world_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mcp-server/: .env.example  README.md  app.yaml  databricks.yml  pyproject.toml  test_mcp_server.py
mcp-server/server/: app.py  main.py  tools.py  utils.py
model-serving-agent/: README.md  agent.py  log_and_deploy.py  test_endpoint.py
